--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -326,14 +326,21 @@ fra:
       prescription: "Prescription"
       product: "Produits"
       # product_birth: "Product birth"
+      # product_consumption: "Product consumption"
+      # product_creation: "Product creation"
       # product_death: "Product death"
+      # product_division: "Product division"
       # product_enjoyment: "Product enjoyment"
       product_group: "Groupe de produit"
       product_indicator_datum: "Valeur d’indicateur"
+      # product_junction: "Product junction"
+      # product_junction_way: "Product junction way"
       product_linkage: "Lien entre produits"
       product_localization: "Passage d’un produit en un lieu"
       # product_measurement: "Product measurement"
       product_membership: "Passage d’un produit dans un groupe"
+      # product_merging: "Product merging"
+      # product_mixing: "Product mixing"
       product_move: "" #?
       product_nature: "Type de produit"
       # product_nature_category: "Product nature category"
@@ -378,6 +385,7 @@ fra:
     absolute_currency: "Absolute currency"
     absolute_debit: "Absolute debit"
     # absorber: "Absorber"
+    # absorber_way: "Absorber way"
     acceptance_status: "Acceptance status"
     account: "Compte comptable"
     account_balances: "Balances de compte"
@@ -436,7 +444,7 @@ fra:
     bank_name: "Nom de la banque"
     bank_statement: "Relevé de compte bancaire"
     bank_statements: "Relevés de compte bancaire"
-    birth: "Naissance"
+    birth: "Naissance" #?
     boolean_value: "Valeur booléenne"
     born_at: "Né(e) le"
     born_on: "Date de naissance"
@@ -509,6 +517,8 @@ fra:
     # confirmation_token: "Confirmation token"
     # confirmed_at: "Confirmed at"
     confirmed_on: "Confirmée le"
+    # consumer: "Consumer"
+    # consumer_way: "Consumer way"
     container: "Contenant"
     content: "Contenu"
     content_indicator: "Content indicator" #?
@@ -520,6 +530,7 @@ fra:
     coordinate: "Coordonnée"
     # coordinate_columns: "Coordinate columns"
     # coproducer: "Coproducer"
+    # coproducer_way: "Coproducer way"
     country: "Pays"
     created_at: "Date et heure de création"
     created_on: "Date de création"
@@ -555,7 +566,7 @@ fra:
     dead_on: "Date de décès"
     deal_type: "Type de transaction" #?
     # deals_count: "Deals count"
-    death: "Death"
+    death: "Death" #?
     debit: "Débit"
     debtor: "Debiteur"
     decimal: "Décimal" #?
@@ -742,6 +753,8 @@ fra:
     journal_entry: "Écriture"
     # journal_entry_item: "Journal entry item"
     journal_entry_items: "Lignes d’écritures"
+    # junction: "Junction"
+    junction_ways: "Junction ways"
     key: "Clé"
     label: "Libellé"
     land_parcels: "Parcelle"
@@ -899,11 +912,15 @@ fra:
     procedures: "Procédures" #?
     process: "Process"
     producer: "Producteur"
+    producer_way: "Producer way"
     producible: "Produisible" #?
     product: "Produit"
     product_account: "Compte de produit"
     product_births: "Product births"
+    # product_consumptions: "Product consumptions"
+    # product_creations: "Product creations"
     product_deaths: "Product deaths"
+    product_divisions: "Product divisions"
     product_enjoyments: "Product enjoyments"
     product_events: "Product events"
     product_indicator_data: "Product indicator data"
@@ -912,10 +929,13 @@ fra:
     product_localizations: "Product localizations"
     product_measurements: "Product measurements"
     product_memberships: "Product memberships"
+    # product_mergings: "Product mergings"
+    product_mixings: "Product mixings"
     product_moves: "Product moves"
     product_nature: "Product nature"
     # product_nature_categories: "Product nature categories"
     product_ownerships: "Product ownerships"
+    product_way: "Product way"
     production: "Production"
     # production_support: "Production support"
     # production_supports: "Production supports"
@@ -1101,6 +1121,7 @@ fra:
     vat_subjected: "Assujetti à la TVA"
     versions: "Versions"
     waiting_deliveries: "Livraisons en attente"
+    ways: "Ways"
     websites: "Sites web"
     with_accounting: "Passer en comptabilité"
     with_commission: "Inclure une commission"
