fix unroll and add some indicateur on wine.

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -946,6 +946,8 @@ eng:
         ZMK: "Zambian Kwacha"
         ZWL: "Zimbabwe Dollar"
       # name: "Monnaies"
+    designation_origins:
+      items: #?
     dimensions:
       attributes:
         # expression: "Expression"
@@ -2138,8 +2140,6 @@ eng:
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
         # bussard: "Bussard"
-        # cabernet_franc: "Cabernet franc"
-        # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
@@ -2206,7 +2206,6 @@ eng:
         # linum: "Lin"
         # liquid_slurry: "Purin"
         # lona: "Lona"
-        # malbec: "Malbec"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2260,7 +2259,6 @@ eng:
         # sand_soil: "Sol sableux"
         # sandy_clay_loam_soil: "Sol limono-argileux"
         # sandy_clay_soil: "Sol argilo-sableux"
-        # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
         # sculptur: "Sculptur"
         # secale: "Secale"
