--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -899,6 +899,8 @@ arb:
         ZWD: "دولار زمبابوي" #?
         # ZWL: "Dollar zimbabwéen"
       # name: "Monnaies"
+    designation_origins:
+      items: #?
     dimensions:
       attributes:
         # expression: "Expression"
@@ -2018,8 +2020,6 @@ arb:
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
         # bussard: "Bussard"
-        # cabernet_franc: "Cabernet franc"
-        # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
@@ -2086,7 +2086,6 @@ arb:
         # linum: "Lin"
         # liquid_slurry: "Purin"
         # lona: "Lona"
-        # malbec: "Malbec"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2139,7 +2138,6 @@ arb:
         # sand_soil: "Sol sableux"
         # sandy_clay_loam_soil: "Sol limono-argileux"
         # sandy_clay_soil: "Sol argilo-sableux"
-        # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
         # sculptur: "Sculptur"
         # secale: "Secale"
