--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -782,6 +782,12 @@ fra:
         ZAR: "Rand"
         ZMK: "Kwacha zambien"
         ZWL: "Dollar zimbabwéen"
+    designation_origins:
+      # name: "Designation origins"
+      items:
+        # aoc_bordeaux: "Aoc bordeaux"
+        # aoc_bordeaux_sup: "Aoc bordeaux sup"
+        # aoc_cremant_de_bordeaux: "Aoc cremant de bordeaux"
     dimensions:
       name: "Dimensions"
       attributes:
@@ -989,6 +995,7 @@ fra:
         cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
+        # designation_origin: "Designation origin"
         dry_matter_rate: "Taux de matière sèche"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
@@ -1041,6 +1048,7 @@ fra:
         potential_hydrogen: "Potentiel hydrogène (pH)"
         protein_concentration_index: "Taux protéïque (TP)"
         protein_matters_concentration: "Teneur en matières protéïques"
+        # reference_year: "Reference year"
         reproductor: "Reproducteur"
         residue_elimination_method: "Méthode d'élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
@@ -2444,11 +2452,12 @@ fra:
         building: "Bâtiment"                               # product_group
         building_division: "Pièce de bâtiment"             # sub_zone
         bussard: "Bussard"                                 # triticum_aestivum
-        cabernet_franc: "Cabernet franc"                   # vitis_vinifera
-        cabernet_sauvignon: "Cabernet sauvignon"           # vitis_vinifera
+        # cabernet_franc_noir: "Cabernet franc noir"       # vitis_vinifera
+        # cabernet_sauvignon_noir: "Cabernet sauvignon noir" # vitis_vinifera
         caphorn: "Blé Caphorn"                             # triticum_aestivum
         capra: "Caprin"                                    # mammalia
         carignan: "Carignan"                               # vitis_vinifera
+        # carmenere_noir: "Carmenere noir"                 # vitis_vinifera
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)" # land_parcel
         chardonnay: "Chardonnay"                           # vitis_vinifera
         chemical_fertilizer: "Engrais chimique"            # mineral_matter
@@ -2456,7 +2465,9 @@ fra:
         cichorium: "Chicoré"                               # asteraceae
         clay_limestone_soil: "Sol argilo-calcaire (Groies)" # land_parcel
         clay_soil: "Terre d’argile lourde"                 # land_parcel
+        # colombar_blanc: "Colombar blanc"                 # vitis_vinifera
         compost: "Compost"                                 # excrement
+        # cot_noir: "Cot noir"                             # vitis_vinifera
         courtot: "Courtot"                                 # triticum_aestivum
         cultivable_zone: "Zone cultivable"                 # land_parcel_group
         cultur: "Cultur"                                   # triticum_durum
@@ -2512,7 +2523,6 @@ fra:
         linum: "Lin"                                       # linaceae
         liquid_slurry: "Purin"                             # excrement
         lona: "Lona"                                       # triticum_aestivum
-        malbec: "Malbec"                                   # vitis_vinifera
         malus: "Pommier"                                   # plant
         mammalia: "Mammifère"                              # animal
         manital: "Manital"                                 # triticum_aestivum
@@ -2530,6 +2540,7 @@ fra:
         mollusca: "Mollusque"                              # animal
         molluscicide: "Produit molluscicide"               # plant_medicine
         mower: "Faucheuse"                                 # equipment
+        # muscadelle_blanc: "Muscadelle blanc"             # vitis_vinifera
         numida: "Numididae"                                # aves
         oratorio: "Oratorio"                               # triticum_aestivum
         organic_matter: "Matière organique"                # matter
@@ -2537,6 +2548,7 @@ fra:
         osteichthyes: "Poissons osseux"                    # animal
         ovis: "Ovin"                                       # mammalia
         pescadou: "Pescadou"                               # triticum_durum
+        # petit_verdot_noir: "Petit verdot noir"           # vitis_vinifera
         phaseolus: "Haricot"                               # fabaceae
         pinot_noir: "Pinot noir"                           # vitis_vinifera
         pisum: "Pisum"                                     # fabaceae
@@ -2565,8 +2577,9 @@ fra:
         sand_soil: "Sol sableux"                           # land_parcel
         sandy_clay_loam_soil: "Sol limono-argileux"        # land_parcel
         sandy_clay_soil: "Sol argilo-sableux"              # land_parcel
-        sauvignon: "Sauvignon"                             # vitis_vinifera
         sauvignon_blanc: "Sauvignon blanc"                 # vitis_vinifera
+        # sauvignon_gris: "Sauvignon gris"                 # vitis_vinifera
+        # sauvignon_noir: "Sauvignon noir"                 # vitis_vinifera
         sculptur: "Sculptur"                               # triticum_durum
         secale: "Secale"                                   # poaceae
         seed: "Semence"                                    # organic_matter
