--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -896,6 +896,8 @@ spa:
         ZMK: "Kwacha zambiano"
         ZWL: "Dólar zimbabuense"
       # name: "Monnaies"
+    designation_origins:
+      items: #?
     dimensions:
       attributes:
         # expression: "Expression"
@@ -2015,8 +2017,6 @@ spa:
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
         # bussard: "Bussard"
-        # cabernet_franc: "Cabernet franc"
-        # cabernet_sauvignon: "Cabernet sauvignon"
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
@@ -2083,7 +2083,6 @@ spa:
         # linum: "Lin"
         # liquid_slurry: "Purin"
         # lona: "Lona"
-        # malbec: "Malbec"
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manital: "Manital"
@@ -2136,7 +2135,6 @@ spa:
         # sand_soil: "Sol sableux"
         # sandy_clay_loam_soil: "Sol limono-argileux"
         # sandy_clay_soil: "Sol argilo-sableux"
-        # sauvignon: "Sauvignon"
         # sauvignon_blanc: "Sauvignon blanc"
         # sculptur: "Sculptur"
         # secale: "Secale"
