--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -656,6 +656,8 @@ spa:
     # employees: "employés"
     # employment: "Emploi/Rôle"
     # encrypted_password: "Mot de passe crypté"
+    # end_junction: "End junction"
+    # end_way: "End way"
     # enjoyments: "Enjoyments"
     # entity: "Personne"
     # entity_1: "Personne 1"
@@ -727,11 +729,11 @@ spa:
     # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # individual: "Individuel"
-    # initial_arrival_cause: "Initial arrival cause"
-    # initial_container: "Initial container"
+    # initial_arrival_cause: "Cause initiale d'arrivée"
+    # initial_container: "Emplacement initial"
     # initial_number: "Numéro initial"
-    # initial_owner: "Initial owner"
-    # initial_population: "Initial population"
+    # initial_owner: "Propriétaire initial"
+    # initial_population: "Population initiale"
     # integer_value: "Valeur entière"
     # intervention: "Intervention"
     # intervention_casts: "Intervention casts"
@@ -755,6 +757,7 @@ spa:
     # journal_entry: "Écriture"
     # journal_entry_items: "Lignes d’écritures"
     # junction_ways: "Junction ways"
+    # junctions: "Junctions"
     # key: "Clé"
     # label: "Libellé"
     # land_parcels: "Parcelle"
@@ -1006,6 +1009,8 @@ spa:
     # spaced_iban: "IBAN"
     # sql_type: "Type SQL"
     # start: "Début"
+    # start_junction: "Start junction"
+    # start_way: "Start way"
     # started_at: "Débuté à"
     # started_on: "Débuté le"
     # state: "État"
