--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1101,7 +1101,7 @@ arb:
         # figure: "Forme"
         # freezing_point_temperature: "Point de solidification"
         # geographic_coordinate: "Coordonnées géographiques"
-        # healthy: "Phase du bioprocessus de maladie d’un animal"
+        # healthy: "Bonne santé"
         # height: "Hauteur"
         # horizontal_rotation: "Rotation horizontale"
         # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
@@ -1365,7 +1365,9 @@ arb:
     plant_life_states:
       items:
         # booting: "Montaison"
+        # flowering: "Floraison"
         # germination: "Germination"
+        # heading: "Tallage"
         # senescence: "Sénescence"
         # tillering: "Tallage"
       # name: "États du développement végétal"
@@ -2020,9 +2022,12 @@ arb:
         # building: "Bâtiment"
         # building_division: "Pièce de bâtiment"
         # bussard: "Bussard"
+        # cabernet_franc_noir: "Cabernet franc noir"
+        # cabernet_sauvignon_noir: "Cabernet sauvignon noir"
         # caphorn: "Blé Caphorn"
         # capra: "Caprin"
         # carignan: "Carignan"
+        # carmenere_noir: "Carmenere noir"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
         # chemical_fertilizer: "Engrais chimique"
@@ -2030,7 +2035,9 @@ arb:
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
         # clay_soil: "Terre d’argile lourde"
+        # colombar_blanc: "Colombar blanc"
         # compost: "Compost"
+        # cot_noir: "Cot noir"
         # courtot: "Courtot"
         # cultivable_zone: "Zone cultivable"
         # cultur: "Cultur"
@@ -2103,6 +2110,7 @@ arb:
         # mollusca: "Mollusque"
         # molluscicide: "Produit molluscicide"
         # mower: "Faucheuse"
+        # muscadelle_blanc: "Muscadelle blanc"
         # numida: "Numididae"
         # oratorio: "Oratorio"
         # organic_matter: "Matière organique"
@@ -2110,6 +2118,7 @@ arb:
         # osteichthyes: "Poissons osseux"
         # ovis: "Ovin"
         # pescadou: "Pescadou"
+        # petit_verdot_noir: "Petit verdot noir"
         # phaseolus: "Haricot"
         # pinot_noir: "Pinot noir"
         # pisum: "Pisum"
@@ -2139,6 +2148,8 @@ arb:
         # sandy_clay_loam_soil: "Sol limono-argileux"
         # sandy_clay_soil: "Sol argilo-sableux"
         # sauvignon_blanc: "Sauvignon blanc"
+        # sauvignon_gris: "Sauvignon gris"
+        # sauvignon_noir: "Sauvignon noir"
         # sculptur: "Sculptur"
         # secale: "Secale"
         # seed: "Semence"
