--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -576,7 +576,7 @@ jpn:
     # currency_precision: "Nombre de décimales"
     # currency_rate: "Taux de change"
     # current_amount: "Montant actuel"
-    # current_healthy: "État de santé actuel"
+    # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
