--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1185,7 +1185,7 @@ arb:
     currency_rate: "سعر الصرف"
     # current_amount: "Montant actuel"
     current_financial_year: "الفترة المحاسبية الحالية" #?
-    # current_healthy: "État de santé actuel"
+    # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
