--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -768,7 +768,7 @@ eng:
     currency_rate: "Currency rate"
     current_amount: "Current amount"
     current_financial_year: "Current financial year" #?
-    # current_healthy: "État de santé actuel"
+    # current_healthy: "Bonne santé actuelle"
     # current_localization: "Current localization"
     # current_net_mass: "Dernière pesée"
     # current_ownership: "Current ownership"
