--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -900,7 +900,11 @@ arb:
         # ZWL: "Dollar zimbabwéen"
       # name: "Monnaies"
     designation_origins:
-      items: #?
+      items:
+        # aoc_bordeaux: "AOC Bordeaux"
+        # aoc_bordeaux_sup: "AOC Bordeaux Supérieur"
+        # aoc_cremant_de_bordeaux: "AOC Crémant de Bordeaux"
+      # name: "Appellations"
     dimensions:
       attributes:
         # expression: "Expression"
@@ -1070,6 +1074,7 @@ arb:
           # choice: "Liste de choix"
           # decimal: "Chiffre (décimal)"
           # geometry: "Forme spatiale"
+          # integer: "Entier"
           # measure: "Mesure"
           # multi_polygon: "Multi-polygone spatial"
           # point: "Point spatial"
@@ -1092,6 +1097,7 @@ arb:
         # cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en Cuivre"
+        # designation_origin: "Appellation"
         # dry_matter_rate: "Taux de matière sèche"
         # economical_milk_index: "Index économique laitier (INEL)"
         # energy: "Énergie"
@@ -1144,6 +1150,7 @@ arb:
         # potential_hydrogen: "Potentiel hydrogène (pH)"
         # protein_concentration_index: "Taux protéïque (TP)"
         # protein_matters_concentration: "Teneur en matières protéïques"
+        # reference_year: "Millésime"
         # reproductor: "Reproducteur"
         # residue_elimination_method: "Méthode d'élimination des résidus"
         # row_plants_interval: "Intervalle inter-plants"
@@ -1598,6 +1605,7 @@ arb:
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
+        # escourgeon_barley_crop: "Orge d'hiver Escourgeon"
         # euclide_wheat_crop: "Culture de blé tendre Euclide"
         # euclide_wheat_seed_25: "Semence de blé tendre Euclide"
         # ewe_milk: "Lait de brebis"
@@ -1671,6 +1679,7 @@ arb:
         # red_chesnut_land_parcel: "Parcelle de terres rouges à chataigniers"
         # riflexine: "Riflexine"
         # running_water: "Eau du réseau"
+        # rye_crop: "Culture de seigle"
         # sand_land_parcel: "Parcelle sableuse"
         # sandy_clay_land_parcel: "Parcelle argilo-sableuse"
         # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
@@ -1693,6 +1702,7 @@ arb:
         # spreader_trailer: "Épandeur à fumier"
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
+        # spring_oat_crop: "Culture d'avoine de printemps"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
         # superficial_plow: "Cultipacker"
@@ -1719,6 +1729,7 @@ arb:
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
         # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
+        # winter_oat_crop: "Culture d'avoine d'hiver"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1822,14 +1833,17 @@ arb:
       items:
         # annual_frost_fallow_land: "Gel annuel"
         # calf: "Veau"
+        # escourgeon_barley: "Orge escourgeon"
         # grain_corn: "Maïs grain"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
         # permanent_meadow: "Prairie permanente"
+        # rye: "Seigle"
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
         # sorghum: "Sorgho"
         # spring_barley: "Orge de printemps"
+        # spring_oat: "Avoine de printemps"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         # triticale: "Triticale"
@@ -1838,6 +1852,7 @@ arb:
         # winery: "Chai"
         # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
+        # winter_oat: "Avoine d'hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       # name: "Types de production"
@@ -2077,6 +2092,7 @@ arb:
         # hordeum_hibernum_cerevisiae_hypoproteinae: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
         # hordeum_vernum: "Orge de printemps"
         # hordeum_vernum_hypoproteinae: "Orge de printemps (faible teneur en protéïnes)"
+        # hordeum_vulgare: "Orge escourgeon"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
         # implanter: "Planteuse"
