--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -947,7 +947,11 @@ eng:
         ZWL: "Zimbabwe Dollar"
       # name: "Monnaies"
     designation_origins:
-      items: #?
+      items:
+        # aoc_bordeaux: "AOC Bordeaux"
+        # aoc_bordeaux_sup: "AOC Bordeaux Supérieur"
+        # aoc_cremant_de_bordeaux: "AOC Crémant de Bordeaux"
+      # name: "Appellations"
     dimensions:
       attributes:
         # expression: "Expression"
@@ -1145,6 +1149,7 @@ eng:
           # choice: "Liste de choix"
           # decimal: "Chiffre (décimal)"
           # geometry: "Forme spatiale"
+          # integer: "Entier"
           # measure: "Mesure"
           # multi_polygon: "Multi-polygone spatial"
           # point: "Point spatial"
@@ -1168,6 +1173,7 @@ eng:
         cells_concentration: "Cells concentration" #?
         clostridial_spores_concentration: "Clostridial spores concentration"
         # copper_concentration: "Teneur en Cuivre"
+        # designation_origin: "Appellation"
         # dry_matter_rate: "Taux de matière sèche"
         # economical_milk_index: "Index économique laitier (INEL)"
         # energy: "Énergie"
@@ -1223,6 +1229,7 @@ eng:
         # potential_hydrogen: "Potentiel hydrogène (pH)"
         # protein_concentration_index: "Taux protéïque (TP)"
         protein_matters_concentration: "Protein matters concentration"
+        # reference_year: "Millésime"
         # reproductor: "Reproducteur"
         # residue_elimination_method: "Méthode d'élimination des résidus"
         # row_plants_interval: "Intervalle inter-plants"
@@ -1685,6 +1692,7 @@ eng:
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
+        # escourgeon_barley_crop: "Orge d'hiver Escourgeon"
         # euclide_wheat_crop: "Culture de blé tendre Euclide"
         # euclide_wheat_seed_25: "Semence de blé tendre Euclide"
         # ewe_milk: "Lait de brebis"
@@ -1758,6 +1766,7 @@ eng:
         # red_chesnut_land_parcel: "Parcelle de terres rouges à chataigniers"
         # riflexine: "Riflexine"
         # running_water: "Eau du réseau"
+        # rye_crop: "Culture de seigle"
         # sand_land_parcel: "Parcelle sableuse"
         # sandy_clay_land_parcel: "Parcelle argilo-sableuse"
         # sandy_clay_loam_land_parcel: "Parcelle limono-argileuse"
@@ -1780,6 +1789,7 @@ eng:
         # spreader_trailer: "Épandeur à fumier"
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
+        # spring_oat_crop: "Culture d'avoine de printemps"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
         # superficial_plow: "Cultipacker"
@@ -1806,6 +1816,7 @@ eng:
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
         # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
+        # winter_oat_crop: "Culture d'avoine d'hiver"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1930,6 +1941,7 @@ eng:
         animal_global_documentation: "Animal global documentation" #?
         # annual_frost_fallow_land: "Gel annuel"
         # calf: "Veau"
+        # escourgeon_barley: "Orge escourgeon"
         feeding: "Feeding" #?
         # grain_corn: "Maïs grain"
         identification: "Identification" #?
@@ -1940,11 +1952,13 @@ eng:
         # permanent_meadow: "Prairie permanente"
         production: "Production" #?
         reproduction: "Reproduction" #?
+        # rye: "Seigle"
         sanitary: "Sanitary" #?
         # seed_corn: "Maïs semence"
         # silage_corn: "Maïs ensilage"
         # sorghum: "Sorgho"
         # spring_barley: "Orge de printemps"
+        # spring_oat: "Avoine de printemps"
         stock_management: "Stock management" #?
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
@@ -1958,6 +1972,7 @@ eng:
         # winery: "Chai"
         # winter_barley: "Orge d'hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
+        # winter_oat: "Avoine d'hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       name: "Name"
@@ -2197,6 +2212,7 @@ eng:
         # hordeum_hibernum_cerevisiae_hypoproteinae: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
         # hordeum_vernum: "Orge de printemps"
         # hordeum_vernum_hypoproteinae: "Orge de printemps (faible teneur en protéïnes)"
+        # hordeum_vulgare: "Orge escourgeon"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatter"
         # implanter: "Planteuse"
