--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -255,6 +255,7 @@ spa:
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
+        # market_garden_crops: "Maraîchage"
         # meadow: "Prairie"
         # oilseed_crops: "Culture oléagineuse"
         # palmiped_farming: "Élevage de palmipèdes"
@@ -1548,6 +1549,7 @@ spa:
         # apple_crop: "Verger de pommiers"
         # ascott_wheat_crop: "Culture de blé tendre Ascott"
         # ascott_wheat_seed_25: "Semence de blé tendre Ascott"
+        # asparagus_crop: "Aspergeraie"
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_grain: "Grain d’orge"
@@ -1562,6 +1564,7 @@ spa:
         # caphorn_wheat_crop: "Culture de blé tendre Caphorn"
         # caphorn_wheat_seed_25: "Semence de blé tendre Caphorn"
         # capra_manure: "Fumier de caprin"
+        # carrot_crop: "Culture de carotte"
         # cattle_compost: "Compost de bovins"
         # cattle_herd: "Troupeau de bovins"
         # cattle_liquid_slurry: "Purin de bovins"
@@ -1612,6 +1615,7 @@ spa:
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
+        # garlic_crop: "Culture d'ail"
         # gas: "Gaz"
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
@@ -1700,6 +1704,7 @@ spa:
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # spring_oat_crop: "Culture d'avoine de printemps"
+        # strawberry_crop: "Culture de fraisier"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
         # superficial_plow: "Cultipacker"
@@ -1829,8 +1834,11 @@ spa:
       choices: #?
       items:
         # annual_frost_fallow_land: "Gel annuel"
+        # asparagus: "Asperge"
         # calf: "Veau"
+        # carrot: "Carotte"
         # escourgeon_barley: "Orge escourgeon"
+        # garlic: "Ail"
         # grain_corn: "Maïs grain"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
@@ -1841,6 +1849,7 @@ spa:
         # sorghum: "Sorgho"
         # spring_barley: "Orge de printemps"
         # spring_oat: "Avoine de printemps"
+        # strawberry: "Fraise"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         # triticale: "Triticale"
@@ -2002,7 +2011,9 @@ spa:
         # actilact: "Actilact"
         # additive: "Additif"
         # alexis: "Alexis"
+        # allium: "Ail"
         # amaranthaceae: "Amaranthaceae"
+        # amaryllidaceae: "Amaryllidaceae"
         # anas: "Palmipède"
         # animal: "Animal"
         # animal_group: "Troupeau"
@@ -2012,6 +2023,7 @@ spa:
         # apiaceae: "Apiaceae"
         # apis: "Apidés"
         # ascott: "Ascott"
+        # asparagus: "Asperge"
         # asteraceae: "Astéracée"
         # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
         # autan: "Autan"
@@ -2066,6 +2078,7 @@ spa:
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
+        # fragaria: "Fraise"
         # fruit: "Fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
@@ -2102,6 +2115,7 @@ spa:
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
         # levis: "Levis"
+        # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
         # liquid_slurry: "Purin"
@@ -2152,6 +2166,7 @@ spa:
         # reaper: "Moissonneuse-batteuse"
         # recital: "Recital"
         # renan: "Renan"
+        # rosaceae: "Rosaceae"
         # rubisko: "Rubisko"
         # runal: "Runal"
         # salmo: "Salmonidé"
