--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -311,6 +311,7 @@ eng:
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
+        # market_garden_crops: "Maraîchage"
         # meadow: "Prairie"
         # oilseed_crops: "Culture oléagineuse"
         # palmiped_farming: "Élevage de palmipèdes"
@@ -1638,6 +1639,7 @@ eng:
         # apple_crop: "Verger de pommiers"
         # ascott_wheat_crop: "Culture de blé tendre Ascott"
         # ascott_wheat_seed_25: "Semence de blé tendre Ascott"
+        # asparagus_crop: "Aspergeraie"
         # aubues_land_parcel: "Parcelle sur craie Nord Vienne (Aubues)"
         # baler: "Botteleuse"
         # barley_grain: "Grain d’orge"
@@ -1652,6 +1654,7 @@ eng:
         # caphorn_wheat_crop: "Culture de blé tendre Caphorn"
         # caphorn_wheat_seed_25: "Semence de blé tendre Caphorn"
         # capra_manure: "Fumier de caprin"
+        # carrot_crop: "Culture de carotte"
         # cattle_compost: "Compost de bovins"
         # cattle_herd: "Troupeau de bovins"
         # cattle_liquid_slurry: "Purin de bovins"
@@ -1702,6 +1705,7 @@ eng:
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
+        # garlic_crop: "Culture d'ail"
         # gas: "Gaz"
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
@@ -1790,6 +1794,7 @@ eng:
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # spring_oat_crop: "Culture d'avoine de printemps"
+        # strawberry_crop: "Culture de fraisier"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
         # superficial_plow: "Cultipacker"
@@ -1940,9 +1945,12 @@ eng:
         animal_farming: "Animal farming" #?
         animal_global_documentation: "Animal global documentation" #?
         # annual_frost_fallow_land: "Gel annuel"
+        # asparagus: "Asperge"
         # calf: "Veau"
+        # carrot: "Carotte"
         # escourgeon_barley: "Orge escourgeon"
         feeding: "Feeding" #?
+        # garlic: "Ail"
         # grain_corn: "Maïs grain"
         identification: "Identification" #?
         land_parcel_management: "Land parcel management" #?
@@ -1960,6 +1968,7 @@ eng:
         # spring_barley: "Orge de printemps"
         # spring_oat: "Avoine de printemps"
         stock_management: "Stock management" #?
+        # strawberry: "Fraise"
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         transformation: "Transformation" #?
@@ -2125,7 +2134,9 @@ eng:
         # actilact: "Actilact"
         # additive: "Additif"
         # alexis: "Alexis"
+        # allium: "Ail"
         # amaranthaceae: "Amaranthaceae"
+        # amaryllidaceae: "Amaryllidaceae"
         # anas: "Palmipède"
         animal: "Animal"
         # animal_group: "Troupeau"
@@ -2135,6 +2146,7 @@ eng:
         # apiaceae: "Apiaceae"
         # apis: "Apidés"
         # ascott: "Ascott"
+        # asparagus: "Asperge"
         # asteraceae: "Astéracée"
         # aubues_soil: "Sols sur craie Nord Vienne (Aubues)"
         # autan: "Autan"
@@ -2189,6 +2201,7 @@ eng:
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
         # forager: "Ensileuse"
+        # fragaria: "Fraise"
         # fruit: "Fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
@@ -2225,6 +2238,7 @@ eng:
         # land_parcel_group: "Groupe de parcelles physiques"
         # lepus: "Lagomorphe"
         # levis: "Levis"
+        # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
         # liquid_slurry: "Purin"
@@ -2276,6 +2290,7 @@ eng:
         # reaper: "Moissonneuse-batteuse"
         # recital: "Recital"
         # renan: "Renan"
+        # rosaceae: "Rosaceae"
         # rubisko: "Rubisko"
         # runal: "Runal"
         # salmo: "Salmonidé"
